--- a/index.html
+++ b/index.html
@@ -304,8 +304,7 @@
             <h4><a href="http://coredevs.herokuapp.com/" target="_blank">Core Dev </a></h4>
             <p><em>Freelance Website </em></p>
             <p>  
-            Founded a team, >Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. 
-            Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design
+            Founded a team that works together to design and deliver web applications to the client.
             </p>
             <p>
               <em>Tech stack:</em><br>
