about section updated

--- a/index.html
+++ b/index.html
@@ -67,8 +67,6 @@
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3><span style="color: white; font-size: 100%; font-weight: 350;">Btech in IT</span> | <span style="color: white; font-size: 100%; font-weight: 350;">Web Developer</span> | <span style="color: white; font-size:100%; font-weight: 350;">Designer</span> | <span style="color: white; font-size: 100%; font-weight: 350;"> Cinematographer</span></h3>
           <p class="font-italic">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-            magna aliqua.
           </p>
           <div class="row">
             <div class="col-lg-6">
@@ -85,8 +83,7 @@
             </div>
           </div>
           <p>
-            Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-            Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque. Aliquid amet quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis culpa magni laudantium dolores.
+            I define myself as a Creative person who loves to sovle problems with the skills I possess and like being physically active
           </p>
         </div>
       </div>
