--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <div class="row">
             <div class="col-lg-6">
               <ul>
-                <li><i class="icofont-dotted-right"></i> <strong>Website:</strong> www.example.com</li>
+                <li><i class="icofont-dotted-right"></i> <strong>Freelance Website:</strong><a href="coredevs.herokuapp.com">coredevs.herokuapp.com</a> </li>
                 <li><i class="icofont-dotted-right"></i> <strong>Phone:</strong> +91 8739007699</li>
               </ul>
             </div>
