--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
   <title>Akash Shukla Website</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+  <link rel="shortcut icon" type="image/png" href="assets/img/fav.png">
+  <link
+    href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
+    rel="stylesheet">
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/icofont/icofont.min.css" rel="stylesheet">
   <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
@@ -27,7 +28,7 @@
     <div class="container">
 
       <h1><a href="index.html">Akash Shukla</a></h1>
-  
+
       <h2>I'm a passionate <span>Web Developer</span>, <span> Designer</span> and <span>Cinematographer</span></h2>
 
       <nav class="nav-menu d-none d-lg-block">
@@ -40,8 +41,10 @@
       </nav><!-- .nav-menu -->
 
       <div class="social-links">
-        <a href="https://www.linkedin.com/in/akash-shukla-1169731b2/" target="_blank" class="linkedin"><i class="icofont-linkedin"></i></a>
-        <a href="https://instagram.com/aio.inc?igshid=193w97cnyleyd" target="_blank" class="instagram"><i class="icofont-instagram"></i></a>
+        <a href="https://www.linkedin.com/in/akash-shukla-1169731b2/" target="_blank" class="linkedin"><i
+            class="icofont-linkedin"></i></a>
+        <a href="https://instagram.com/aio.inc?igshid=193w97cnyleyd" target="_blank" class="instagram"><i
+            class="icofont-instagram"></i></a>
         <a href="https://github.com/AkashShukla09" target="_blank" class="github"><i class="bx bxl-github"></i></a>
 
       </div>
@@ -65,13 +68,17 @@
           <img src="assets/img/me.jpg" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-          <h3><span style="color: white; font-size: 100%; font-weight: 350;">Btech in IT</span> | <span style="color: white; font-size: 100%; font-weight: 350;">Web Developer</span> | <span style="color: white; font-size:100%; font-weight: 350;">Designer</span> | <span style="color: white; font-size: 100%; font-weight: 350;"> Cinematographer</span></h3>
+          <h3><span style="color: white; font-size: 100%; font-weight: 350;">Btech in IT</span> | <span
+              style="color: white; font-size: 100%; font-weight: 350;">Web Developer</span> | <span
+              style="color: white; font-size:100%; font-weight: 350;">Designer</span> | <span
+              style="color: white; font-size: 100%; font-weight: 350;"> Cinematographer</span></h3>
           <p class="font-italic">
           </p>
           <div class="row">
             <div class="col-lg-6">
               <ul>
-                <li><i class="icofont-dotted-right"></i> <strong>Website: </strong><a href="http://coredevs.herokuapp.com/"> coredevs.herokuapp.com</a> </li>
+                <li><i class="icofont-dotted-right"></i> <strong>Website: </strong><a href="https://coredevs.in/">
+                    coredevs.in</a> </li>
                 <li><i class="icofont-dotted-right"></i> <strong>Phone:</strong> +91 8739007699</li>
               </ul>
             </div>
@@ -83,7 +90,8 @@
             </div>
           </div>
           <p>
-            I define myself as a Creative person who loves to sovle problems with the skills I possess and like being physically active
+            I define myself as a Creative person who loves to sovle problems with the skills I possess and like being
+            physically active
           </p>
         </div>
       </div>
@@ -104,35 +112,40 @@
           <div class="progress">
             <span class="skill">Java <i class="val">75%</i></span>
             <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+              </div>
             </div>
           </div>
 
           <div class="progress">
             <span class="skill">C <i class="val">80%</i></span>
             <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
+              </div>
             </div>
           </div>
 
           <div class="progress">
             <span class="skill">C++ <i class="val">70%</i></span>
             <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+              </div>
             </div>
           </div>
 
           <div class="progress">
             <span class="skill">HTML/ CSS/ Bootstrap <i class="val">95%</i></span>
             <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">
+              </div>
             </div>
           </div>
 
           <div class="progress">
             <span class="skill">Node/ Mongo/ Express <i class="val">75%</i></span>
             <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+              </div>
             </div>
           </div>
 
@@ -140,40 +153,45 @@
 
         <div class="col-lg-6">
 
-          
+
 
           <div class="progress">
             <span class="skill">Abobe Premier pro <i class="val">90%</i></span>
             <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
+              </div>
             </div>
           </div>
 
           <div class="progress">
             <span class="skill">Adobe After Effects <i class="val">55%</i></span>
             <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100">
+              </div>
             </div>
           </div>
 
           <div class="progress">
             <span class="skill">Adobe Photoshop <i class="val">85%</i></span>
             <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">
+              </div>
             </div>
           </div>
 
           <div class="progress">
             <span class="skill">Adobe illustrator <i class="val">65%</i></span>
             <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100">
+              </div>
             </div>
           </div>
 
           <div class="progress">
             <span class="skill">Adobe XD <i class="val">95%</i></span>
             <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">
+              </div>
             </div>
           </div>
 
@@ -229,20 +247,20 @@
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
-          	<i class="icofont-badminton-birdie" style="color: #11dbcf;"></i>
+            <i class="icofont-badminton-birdie" style="color: #11dbcf;"></i>
             <h3>Badminton</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
-            <i class="icofont-search-stock"  style="color: #4233ff;"></i>
+            <i class="icofont-search-stock" style="color: #4233ff;"></i>
             <h3>Finance</h3>
           </div>
         </div>
-        </div>
       </div>
+    </div>
 
-    </div><!-- End Interests --> 
+    </div><!-- End Interests -->
   </section><!-- End About Section -->
 
   <!-- ======= Resume Section ======= -->
@@ -259,7 +277,8 @@
           <h3 class="resume-title">Sumary</h3>
           <div class="resume-item pb-0">
             <h4>About me</h4>
-            <p><em>I define myself as a Creative person with keen interests in Web Development, Designing and Cinematography. I like to sovle problems and love being physically active  </em></p>
+            <p><em>I define myself as a Creative person with keen interests in Web Development, Designing and
+                Cinematography. I like to sovle problems and love being physically active </em></p>
           </div>
 
           <h3 class="resume-title">Education</h3>
@@ -275,7 +294,7 @@
             <p><em>CBSE PCM</em></p>
             <p>85.8% Class XII</p>
             <p>10 CGPA Class X</p>
-          </div> 
+          </div>
 
           <h3 class="resume-title">Experience</h3>
           <div class="resume-item">
@@ -287,7 +306,7 @@
             <h4>Photography Club</h4>
             <h5>Jan 2020 - Present</h5>
             <p>Creative Head</p>
-          </div> 
+          </div>
           <div class="resume-item">
             <h4>IEEE-CAS</h4>
             <h5>Jul 2020 - Feb 2021</h5>
@@ -300,14 +319,14 @@
           <div class="resume-item">
             <h4><a href="http://coredevs.herokuapp.com/" target="_blank">Core Dev </a></h4>
             <p><em>Freelance Website </em></p>
-            <p>  
-            Founded a team that works together to design and deliver web applications to the client.
+            <p>
+              Founded a team that works together to design and deliver web applications to the client.
             </p>
             <p>
               <em>Tech stack:</em><br>
               Vanilla JS
             </p>
-            
+
           </div>
           <div class="resume-item">
             <h4>Feed India</h4>
@@ -317,10 +336,10 @@
               The web application intends ease the process of collecting food, money and donate it
               to the needy in an organised manner.
             </p>
-              <p>
-                <em>Tech stack:</em><br>
-                NodeJS, MongoDB, ExpressJS, EJS, CSS, jQuery, Vanilla JS
-              </p>
+            <p>
+              <em>Tech stack:</em><br>
+              NodeJS, MongoDB, ExpressJS, EJS, CSS, jQuery, Vanilla JS
+            </p>
           </div>
           <div class="resume-item">
             <h4>My Khata</h4>
@@ -341,7 +360,7 @@
           <div class="resume-item">
             <h4>Programming Languages</h4>
             <p>
-            Java, C++, Python, C
+              Java, C++, Python, C
             </p>
           </div>
           <div class="resume-item">
@@ -384,7 +403,7 @@
           <div class="info-box">
             <i class="bx bx-map"></i>
             <h3>My freelance website</h3>
-            <p><a href="http://coredevs.herokuapp.com/" target="_blank">coredevs.herokuapp.com</a></p>
+            <p><a href="https://coredevs.in/" target="_blank">coredevs.in</a></p>
           </div>
         </div>
 
@@ -393,9 +412,11 @@
             <i class="bx bx-share-alt"></i>
             <h3>Social Profiles</h3>
             <div class="social-links">
-              <a href="https://www.linkedin.com/in/akash-shukla-1169731b2/" target="_blank" class="linkedin" class="linkedin"><i class="icofont-linkedin"></i></a>
+              <a href="https://www.linkedin.com/in/akash-shukla-1169731b2/" target="_blank" class="linkedin"
+                class="linkedin"><i class="icofont-linkedin"></i></a>
               <!-- <a href="https://github.com/AkashShukla09" target="_blank" class="github"><i class="bx bxl-github"></i></a> -->
-              <a href="https://instagram.com/aio.inc?igshid=193w97cnyleyd" target="_blank" class="instagram"><i class="icofont-instagram"></i></a>
+              <a href="https://instagram.com/aio.inc?igshid=193w97cnyleyd" target="_blank" class="instagram"><i
+                  class="icofont-instagram"></i></a>
             </div>
           </div>
         </div>
