download button added

--- a/index.html
+++ b/index.html
@@ -272,6 +272,18 @@
         <p>Check My Resume</p>
       </div>
 
+      <div id="container">
+        <button class="learn-more">
+          <span class="circle" aria-hidden="true">
+            <span class="icon arrow"></span>
+          </span>
+          <a href="Akash's Resume.pdf" download>
+            <span class="button-text">Download</span>
+          </a>
+        </button>
+      </div>
+      
+
       <div class="row">
         <div class="col-lg-6">
           <h3 class="resume-title">Sumary</h3>
