--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <div class="col-lg-6">
 
           <div class="progress">
-            <span class="skill">Java <i class="val">75%</i></span>
+            <span class="skill">C++ <i class="val">80%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
               </div>
@@ -118,7 +118,7 @@
           </div>
 
           <div class="progress">
-            <span class="skill">C <i class="val">80%</i></span>
+            <span class="skill">JavaScript <i class="val">70%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
               </div>
@@ -126,7 +126,7 @@
           </div>
 
           <div class="progress">
-            <span class="skill">C++ <i class="val">70%</i></span>
+            <span class="skill">Java <i class="val">70%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
               </div>
@@ -156,7 +156,7 @@
 
 
           <div class="progress">
-            <span class="skill">Abobe Premier pro <i class="val">90%</i></span>
+            <span class="skill">SQL/PHP <i class="val">85%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
               </div>
@@ -164,7 +164,7 @@
           </div>
 
           <div class="progress">
-            <span class="skill">Adobe After Effects <i class="val">55%</i></span>
+            <span class="skill">Figma <i class="val">90%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100">
               </div>
@@ -172,7 +172,7 @@
           </div>
 
           <div class="progress">
-            <span class="skill">Adobe Photoshop <i class="val">85%</i></span>
+            <span class="skill">Adobe Premier pro <i class="val">85%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">
               </div>
@@ -180,7 +180,7 @@
           </div>
 
           <div class="progress">
-            <span class="skill">Adobe illustrator <i class="val">65%</i></span>
+            <span class="skill">Adobe Photoshop <i class="val">85%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100">
               </div>
@@ -277,7 +277,7 @@
           <span class="circle" aria-hidden="true">
             <span class="icon arrow"></span>
           </span>
-          <a href="Akash's Resume.pdf" download>
+          <a href="Akash Shukla.pdf" download>
             <span class="button-text">Download</span>
           </a>
         </button>
