--- a/index.html
+++ b/index.html
@@ -112,15 +112,15 @@
           <div class="progress">
             <span class="skill">C++ <i class="val">80%</i></span>
             <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+              <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
               </div>
             </div>
           </div>
 
           <div class="progress">
-            <span class="skill">JavaScript <i class="val">70%</i></span>
+            <span class="skill">JavaScript <i class="val">75%</i></span>
             <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
+              <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
               </div>
             </div>
           </div>
@@ -128,7 +128,7 @@
           <div class="progress">
             <span class="skill">Java <i class="val">70%</i></span>
             <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+              <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
               </div>
             </div>
           </div>
@@ -158,7 +158,7 @@
           <div class="progress">
             <span class="skill">SQL/PHP <i class="val">85%</i></span>
             <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
+              <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">
               </div>
             </div>
           </div>
@@ -166,7 +166,7 @@
           <div class="progress">
             <span class="skill">Figma <i class="val">90%</i></span>
             <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100">
+              <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
               </div>
             </div>
           </div>
@@ -182,7 +182,7 @@
           <div class="progress">
             <span class="skill">Adobe Photoshop <i class="val">85%</i></span>
             <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100">
+              <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">
               </div>
             </div>
           </div>
@@ -298,7 +298,7 @@
             <h4>Vellore Institute Of Technology</h4>
             <h5>May 2023</h5>
             <p><em>BTech in information and Technology</em></p>
-            <p>8.45 CGPA</p>
+            <p>8.82 CGPA</p>
           </div>
           <div class="resume-item">
             <h4>Army Public School</h4>
@@ -308,16 +308,16 @@
             <p>10 CGPA Class X</p>
           </div>
 
-          <h3 class="resume-title">Experience</h3>
+          <h3 class="resume-title">Roles and Responsibility</h3>
           <div class="resume-item">
             <h4>VinnovateIT</h4>
-            <h5>Jul 2020 - Present</h5>
+            <h5>Jul 2020 - May 2022</h5>
             <p>Design Head</p>
           </div>
           <div class="resume-item">
             <h4>Photography Club</h4>
             <h5>Jan 2020 - Present</h5>
-            <p>Creative Head</p>
+            <p>Vice Chairperson</p>
           </div>
           <div class="resume-item">
             <h4>IEEE-CAS</h4>
@@ -372,26 +372,25 @@
           <div class="resume-item">
             <h4>Programming Languages</h4>
             <p>
-              Java, C++, Python, C
+              C++, Java, Python, JavaScript, PHP
             </p>
           </div>
           <div class="resume-item">
-            <h4>Web Development</h4>
+            <h4>Frameworks</h4>
             <p>
-              NodeJS, MongoDB, ExpressJS, EJS, CSS, jQuery,
-              Vanilla JS, HTML, CSS, Bootstrap
+              NodeJS, ExpressJS, Bootstrap, SQL, MongoDB, EJS
             </p>
           </div>
           <div class="resume-item">
-            <h4>Video Editing</h4>
+            <h4>Tools</h4>
             <p>
-              Adobe Premier Pro, Adobe After Effects
+              GIT, XAMPP, VSCode, Postman, Heroku and other hosting services, Figma, Adobe XD and Premiere Pro
             </p>
           </div>
           <div class="resume-item">
-            <h4>Designing</h4>
+            <h4>Soft Skills</h4>
             <p>
-              Adobe Xd, Adobe Photoshop, Adobe illustrator
+              Quick Learning, Team Work, Communication, Creativity, Leadership
             </p>
           </div>
         </div>
