--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             </div>
           </div>
           <p>
-            I define myself as a Creative person who loves to sovle problems with the skills I possess and like being
+            I define myself as a Creative person who loves to solve problems with the skills I possess and like being
             physically active
           </p>
         </div>
@@ -316,8 +316,12 @@
           </div>
           <div class="resume-item">
             <h4>Photography Club</h4>
-            <h5>Jan 2020 - Present</h5>
+            <h5>Mar 2022 - Present</h5>
             <p>Vice Chairperson</p>
+            <h5>Feb 2021 - Mar 2022</h5>
+            <p>Creative Head</p>
+            <h5>Jan 2020 - Feb 2021</h5>
+            <p>Cinematographer</p>
           </div>
           <div class="resume-item">
             <h4>IEEE-CAS</h4>
@@ -436,7 +440,7 @@
           <div class="info-box">
             <i class="bx bx-envelope"></i>
             <h3>Email Me</h3>
-            <p><span style="color: #f9ca20;">akashshukla09092000@gmail.com</span></p>
+            <p><span style="color: #f9ca20;">akash.shukla2019@vitstudent.ac.in</span></p>
           </div>
         </div>
         <div class="col-md-6 mt-4 d-flex align-items-stretch">
