--- a/index.html
+++ b/index.html
@@ -309,13 +309,9 @@
           </div>
 
           <h3 class="resume-title">Roles and Responsibility</h3>
+         
           <div class="resume-item">
-            <h4>VinnovateIT</h4>
-            <h5>Jul 2020 - May 2022</h5>
-            <p>Design Head</p>
-          </div>
-          <div class="resume-item">
-            <h4>Photography Club</h4>
+            <h4><a href="https://instagram.com/photographyclubvit?igshid=YmMyMTA2M2Y=" target="_blank">The Photography Club </a></h4>
             <h5>Mar 2022 - Present</h5>
             <p>Vice Chairperson</p>
             <h5>Feb 2021 - Mar 2022</h5>
@@ -323,8 +319,17 @@
             <h5>Jan 2020 - Feb 2021</h5>
             <p>Cinematographer</p>
           </div>
+
           <div class="resume-item">
-            <h4>IEEE-CAS</h4>
+            <h4><a href="https://www.linkedin.com/company/v-innovate-it/" target="_blank">VinnovateIT</a></h4>
+            <h5>May 2021 - May 2022</h5>
+            <p>Design Head</p>
+            <h5>Jul 2020 - May 2021</h5>
+            <p>Designer</p>
+          </div>
+
+          <div class="resume-item">
+            <h4><a href="https://www.linkedin.com/company/ieee-circuits-and-systems-society-cass/" target="_blank">IEEE-CAS</a></h4>
             <h5>Jul 2020 - Feb 2021</h5>
 
             <p>Core Committee Member</p>
@@ -333,14 +338,17 @@
         <div class="col-lg-6">
           <h3 class="resume-title">Projects</h3>
           <div class="resume-item">
-            <h4><a href="http://coredevs.herokuapp.com/" target="_blank">Core Dev </a></h4>
-            <p><em>Freelance Website </em></p>
+            <h4><a href="https://github.com/AkashShukla09/DSAbot" target="_blank">DSAbot </a></h4>
+            <p><em>A bot based automation application</em></p>
             <p>
-              Founded a team that works together to design and deliver web applications to the client.
+              ● Sends one DSA question each day on user’s Discord server, user can also request more questions each day.
+              ● Sends most asked questions from top tech companies.
+
             </p>
             <p>
               <em>Tech stack:</em><br>
-              Vanilla JS
+              Discordjs, Nodejs, Express, MongoDB
+
             </p>
 
           </div>
