--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
             <h4><a href="https://github.com/AkashShukla09/DSAbot" target="_blank">DSAbot </a></h4>
             <p><em>A bot based automation application</em></p>
             <p>
-              ● Sends one DSA question each day on user’s Discord server, user can also request more questions each day.
+              ● Sends one DSA question each day on user’s Discord server, user can also request more questions each day.<br>
               ● Sends most asked questions from top tech companies.
 
             </p>
