--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
             <!-- <div class="social-links"> -->
               <!-- <a href="https://www.linkedin.com/in/akash-shukla-1169731b2/" target="_blank" class="linkedin"
                 class="linkedin"><i class="icofont-linkedin"></i></a> -->
-                <p><a href="https://www.linkedin.com/in/akash-shukla-1169731b2/" target="_blank">I love with connect with new minds!</a></p>
+                <p><a href="https://www.linkedin.com/in/akash-shukla-1169731b2/" target="_blank">I love to connect with new minds!</a></p>
               <!-- <a href="https://github.com/AkashShukla09" target="_blank" class="github"><i class="bx bxl-github"></i></a> -->
               <!-- <a href="https://instagram.com/aio.inc?igshid=193w97cnyleyd" target="_blank" class="instagram"><i
                   class="icofont-instagram"></i></a> -->
